# xlns

./: .buildinfo  .gitignore  LICENSE  LNS_Intro.md  README.md  genindex.html  index.html  maintainer-guide.md  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: python-package.yml
_sources/: index.rst.txt
_sources/xlnstorch/: index.rst.txt  layers.rst.txt  operations.rst.txt
conf/: dally.py  xlnsudFracnorm.py
docs/source/: conf.py  index.rst
examples/: arn_generic.py  arnnp_lpvip.py  arnnp_utah.py  arnnpb.py  arnnpr_lpvip.py  arnnpv.py  arnud.py  arnv.py  basel.py  benchmark_zero_division.py  faithfultest.py  inv_naive.py  mnist_demo.py  testlikecpp16.py  testlikecpp16lpvip.py  testlikecpp32.py  testnpbufunc.py  testnpufunc.py  testutahlikecpp32.py  testvufunc.py  weightin.npz  xlnsbothtest.cpp
examples/xlnstorch/: arithmetic_operations.py  autograd_support.py  base_conversion.py  comparison_operations.py  mnist_example.py  optimizer_example.py  tensor_creation.py
src/: xlns.py
src/conf/: dally.py  lpvip_ufunc.py  xlnsudFracnorm.py
src/xlnsconf/: README.md  interp_cotran_ufunc.py  lpvip_ufunc.py  tab_ufunc.py  utah_tayco_ufunc.py
src/xlnstorch/: __init__.py  base.py  dispatch_table.py  graph.py  lns_ops.py  tensor.py
test/: test_framework_integration.py  test_lns_values.py  testnpufunc.py  testvufunc.py  xlnsconf  xlnstest.py
test/xlnstorch/: conftest.py  test_activation_ops.py  test_arithmetic_ops.py  test_import.py  (+6 more)
xlnstorch/: index.html  layers.html  lnstensors.html  operations.html  optimizers.html
(+37 files in other folders)
